DemoReelExample.kt: make network work